--- a/src/styles/DogResults.css
+++ b/src/styles/DogResults.css
@@ -6,7 +6,6 @@
     border-radius: 18px;
     overflow: hidden;
     min-height: 220px;
-    display: table;
     padding: 0px 30px 15px 30px;
 }
 
